--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "context-menu",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production"
@@ -16,7 +16,7 @@
     "mini-css-extract-plugin": "^2.1.0",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.6.0"
   },
   "keywords": [],
   "author": "",
